Add footer page nikhil

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+footer h5 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+footer a:hover {
+  color: #ff5722 !important;
+}
+footer a {
+  transition: color 0.3s ease;
+}
+
+footer a:hover {
+  color: #007bff; 
+}
